--- a/contact.html
+++ b/contact.html
@@ -1,100 +1,72 @@
 <!doctype html>
-<html lang="ar" dir="rtl" data-theme="light">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>تواصل معنا – مجلس طلاب خطوة</title>
-  <meta name="description" content="تواصل مع مجلس طلاب خطوة: استفسارات، شراكات، تطوع."/>
-  <meta name="theme-color" content="#1e40af"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>تواصل معنا – Khotwa</title>
   <style>
-    :root{--primary:#1e40af;--primary-600:#1d4ed8;--bg:#fff;--text:#0f172a;--muted:#6b7280;--ring:#e5e7eb;--card:#f8fafc}
-    *{box-sizing:border-box}html,body{height:100%}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
-    a{color:inherit;text-decoration:none}.container{width:min(1120px,92%);margin-inline:auto}
-    .navbar{position:sticky;top:0;z-index:40;background:rgba(255,255,255,.85);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid var(--ring)}
-    .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:.8rem 0}
-    .nav-links{display:flex;gap:1rem;align-items:center}.nav-links a{padding:.5rem .75rem;border-radius:10px;font-weight:600}.nav-links a:hover{background:var(--card)}
-    .nav-cta{padding:.55rem .9rem;border-radius:12px;background:#1e40af;color:#fff!important}
-    .menu-toggle{display:none;border:1px solid var(--ring);padding:.5rem .7rem;border-radius:10px;background:#fff}
-    @media(max-width:860px){.menu-toggle{display:inline-flex}.nav-links{display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.06)}.nav-links.open{display:flex}.nav-links a{width:100%}}
-    header.hero{background:linear-gradient(180deg,#ffffff 0%,#f5f7ff 100%);border-bottom:1px solid var(--ring)}.hero-inner{padding:2.6rem 0}
-    .hero h1{margin:0 0 .4rem;font-size:clamp(1.5rem,2vw + 1rem,2.2rem)}.muted{color:var(--muted)}
-    section{padding:2rem 0}.grid{display:grid;gap:1rem}.grid-2{grid-template-columns:1.2fr .8fr}@media(max-width:980px){.grid-2{grid-template-columns:1fr}}
-    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    .input,.textarea{width:100%;border:1px solid var(--ring);border-radius:12px;padding:.75rem .9rem}.textarea{min-height:130px;resize:vertical}
-    .btn{display:inline-flex;align-items:center;gap:.5rem;padding:.8rem 1rem;border-radius:12px;border:1px solid var(--ring);background:#fff;cursor:pointer}.btn-primary{background:#1e40af;border-color:transparent;color:#fff}
-    .ok{color:#0a7a3d}.err{color:#b00020}
-    footer{border-top:1px solid var(--ring);background:#fff}.foot{display:grid;grid-template-columns:1.2fr 1fr;gap:1rem;padding:1.4rem 0}@media(max-width:860px){.foot{grid-template-columns:1fr}}
+    :root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
+    *{box-sizing:border-box}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text)}
+    .container{width:min(1120px,92%);margin-inline:auto}
+    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring)}
+    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
+    .brand .logo{width:28px;height:28px;object-fit:cover;border-radius:6px}
+    .nav-links{display:flex;gap:1rem}.nav-links a{padding:.5rem .75rem;border-radius:10px}.nav-links a:hover{background:var(--card)}
+    section{padding:2rem 0}.muted{color:var(--muted)}
+    form{display:grid;gap:.7rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px}
+    button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer}
+    .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}@media(max-width:980px){.grid{grid-template-columns:1fr}}
+    iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
+    footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
 <body>
-  <nav class="navbar" aria-label="الشريط العلوي">
+  <nav class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html">مجلس طلاب خطوة – La Trobe</a>
-      <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
-      <div id="primary-menu" class="nav-links" role="menubar">
-        <a href="/about.html" role="menuitem">من نحن</a>
-        <a href="/news.html" role="menuitem">الأخبار</a>
-        <a href="/events.html" role="menuitem">الفعاليات</a>
-        <a href="/contact.html" aria-current="page" role="menuitem">تواصل</a>
-        <a href="/index.html#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
+      <a class="brand" href="/index.html">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="28" height="28">
+        <span>مجلس طلاب خطوة – La Trobe</span>
+      </a>
+      <div class="nav-links">
+        <a href="/about.html">من نحن</a>
+        <a href="/news.html">الأخبار</a>
+        <a href="/events.html">الفعاليات</a>
+        <a href="/calendar.html">التقويم</a>
+        <a href="/contact.html">تواصل</a>
       </div>
     </div>
   </nav>
 
-  <header class="hero">
-    <div class="container hero-inner"><h1>تواصل معنا</h1><p class="muted">أرسل لنا استفسارك أو اقتراحك.</p></div>
-  </header>
-
-  <main>
-    <section>
-      <div class="container grid grid-2">
-        <form id="contactForm" class="card" action="https://formspree.io/f/mblkegbr" method="POST" novalidate>
-          <div><label for="name">الاسم الكامل</label><input class="input" id="name" name="name" type="text" autocomplete="name" required></div>
-          <div><label for="email">البريد الإلكتروني</label><input class="input" id="email" name="email" type="email" autocomplete="email" required></div>
-          <div><label for="subject">الموضوع</label><input class="input" id="subject" name="subject" type="text" required></div>
-          <div><label for="message">رسالتك</label><textarea class="textarea" id="message" name="message" required></textarea></div>
-          <input type="text" name="_honey" style="display:none"><input type="hidden" name="_redirect" value="/contact.html?sent=1">
-          <div style="display:flex;gap:.6rem;flex-wrap:wrap"><button class="btn btn-primary" type="submit">إرسال</button><button class="btn" type="reset">مسح</button></div>
-          <p id="formNote" class="muted" aria-live="polite" style="margin:.6rem 0 0"></p>
+  <main class="container">
+    <section class="grid">
+      <div>
+        <h1>راسلنا</h1>
+        <p class="muted">يسعدنا استقبال أسئلتك واقتراحاتك.</p>
+        <form action="https://formspree.io/f/mblkegbr" method="POST">
+          <input type="text" name="name" placeholder="الاسم الكامل" required>
+          <input type="email" name="email" placeholder="البريد الإلكتروني" required>
+          <textarea name="message" rows="6" placeholder="رسالتك" required></textarea>
+          <input type="hidden" name="_subject" value="رسالة جديدة من موقع المجلس">
+          <button type="submit">إرسال</button>
         </form>
-
-        <aside class="card" aria-label="معلومات التواصل">
-          <h3 style="margin-top:0">معلومات</h3>
-          <p class="muted">البريد: <a href="mailto:khotwaaustralia@gmail.com">khotwaaustralia@gmail.com</a></p>
-          <p class="muted">إنستغرام: <a target="_blank" rel="noopener" href="https://www.instagram.com/khotwa.sc/">@khotwa.sc</a></p>
-          <hr style="border:none;border-top:1px solid var(--ring)"/>
-          <h4>خريطة الحرم (La Trobe – Bundoora)</h4>
-          <div style="aspect-ratio:16/9;border:1px solid var(--ring);border-radius:12px;overflow:hidden">
-            <iframe title="خريطة La Trobe – Bundoora" width="100%" height="100%" style="border:0" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-              src="https://www.google.com/maps?q=La%20Trobe%20University%20Bundoora%20Campus%20Plenty%20Rd%20%26%20Kingsbury%20Dr%20Bundoora%20VIC%203086&output=embed"></iframe>
-          </div>
-        </aside>
+      </div>
+      <div>
+        <h2>موقعنا – Bundoora</h2>
+        <p class="muted">La Trobe University – Bundoora Campus</p>
+        <iframe loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+          src="https://www.google.com/maps?q=La+Trobe+University,+Bundoora&output=embed"></iframe>
       </div>
     </section>
   </main>
 
-  <footer aria-label="تذييل الموقع">
-    <div class="container foot">
-      <div><strong>مجلس طلاب خطوة – La Trobe</strong><p class="muted" style="margin:.4rem 0 0">© <span id="year"></span> جميع الحقوق محفوظة</p></div>
-      <div class="muted" style="align-self:end;text-align:end">بريد: khotwaaustralia@gmail.com</div>
+  <footer>
+    <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
+      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
     </div>
   </footer>
-
-  <script>
-    const btn=document.getElementById('menuBtn'),menu=document.getElementById('primary-menu');
-    btn?.addEventListener('click',()=>{const o=menu.classList.toggle('open');btn.setAttribute('aria-expanded',String(o));});
-    document.getElementById('year').textContent=new Date().getFullYear();
-
-    const form=document.getElementById('contactForm'),note=document.getElementById('formNote');
-    form.addEventListener('submit',async (e)=>{
-      e.preventDefault();
-      if(!form.checkValidity()){ note.textContent='تأكد من تعبئة جميع الحقول بشكل صحيح.'; return; }
-      try{
-        const res=await fetch(form.action,{method:'POST',body:new FormData(form),headers:{'Accept':'application/json'}});
-        if(res.ok){ note.innerHTML='<span class="ok">تم الإرسال بنجاح. شكرًا لتواصلك!</span>'; form.reset(); }
-        else{ note.innerHTML='<span class="err">تعذّر الإرسال. حاول مرة أخرى.</span>'; }
-      }catch(_){ note.innerHTML='<span class="err">خطأ في الاتصال. حاول لاحقًا.</span>'; }
-    });
-    if(new URLSearchParams(location.search).get('sent')==='1'){ note.innerHTML='<span class="ok">تم إرسال رسالتك. سنعاودك قريبًا.</span>'; }
-  </script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
