--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,34 @@
   <title>تواصل معنا – Khotwa</title>
   <style>
     :root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
-    *{box-sizing:border-box}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text)}
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
+    /* إصلاح مظهر الروابط */
+    a{color:inherit;text-decoration:none}
+    a:visited{color:inherit}
+    a:hover{text-decoration:none}
+
     .container{width:min(1120px,92%);margin-inline:auto}
-    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring)}
+    /* Navbar */
+    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .brand .logo{width:28px;height:28px;object-fit:cover;border-radius:6px}
-    .nav-links{display:flex;gap:1rem}.nav-links a{padding:.5rem .75rem;border-radius:10px}.nav-links a:hover{background:var(--card)}
-    section{padding:2rem 0}.muted{color:var(--muted)}
+    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
+    .nav-links{display:flex;gap:1rem}
+    .nav-links a{padding:.5rem .75rem;border-radius:10px}
+    .nav-links a:hover{background:var(--card)}
+
+    section{padding:2rem 0}
+    .muted{color:var(--muted)}
+
     form{display:grid;gap:.7rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px}
+    input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px;font:inherit}
     button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer}
-    .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}@media(max-width:980px){.grid{grid-template-columns:1fr}}
+
+    .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
+    @media(max-width:980px){.grid{grid-template-columns:1fr}}
+
     iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
@@ -25,16 +41,16 @@
 <body>
   <nav class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="28" height="28">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
-      <div class="nav-links">
-        <a href="/about.html">من نحن</a>
-        <a href="/news.html">الأخبار</a>
-        <a href="/events.html">الفعاليات</a>
-        <a href="/calendar.html">التقويم</a>
-        <a href="/contact.html">تواصل</a>
+      <div class="nav-links" role="menubar">
+        <a href="/about.html" role="menuitem">من نحن</a>
+        <a href="/news.html" role="menuitem">الأخبار</a>
+        <a href="/events.html" role="menuitem">الفعاليات</a>
+        <a href="/calendar.html" role="menuitem">التقويم</a>
+        <a href="/contact.html" role="menuitem" aria-current="page">تواصل</a>
       </div>
     </div>
   </nav>
@@ -49,14 +65,17 @@
           <input type="email" name="email" placeholder="البريد الإلكتروني" required>
           <textarea name="message" rows="6" placeholder="رسالتك" required></textarea>
           <input type="hidden" name="_subject" value="رسالة جديدة من موقع المجلس">
+          <!-- اختياري: إعادة توجيه بعد الإرسال -->
+          <input type="hidden" name="_next" value="https://khotwastudentcouncil.com/contact.html">
           <button type="submit">إرسال</button>
         </form>
       </div>
+
       <div>
         <h2>موقعنا – Bundoora</h2>
         <p class="muted">La Trobe University – Bundoora Campus</p>
         <iframe loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-          src="https://www.google.com/maps?q=La+Trobe+University,+Bundoora&output=embed"></iframe>
+          src="https://www.google.com/maps?hl=ar&q=La+Trobe+University,+Bundoora&output=embed&t=m&z=15"></iframe>
       </div>
     </section>
   </main>
