--- a/about.html
+++ b/about.html
@@ -135,4 +135,129 @@
       <h1 data-lang="ar">من نحن</h1>
       <h1 data-lang="en" hidden>About Us</h1>
       <p class="muted" data-lang="ar">مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن.</p>
-      <p c
+      <p class="muted" data-lang="en" hidden>The Khotwa Student Council represents students of the Khotwa program at La Trobe University – Melbourne.</p>
+
+      <div class="grid grid-2">
+        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3><p data-lang="ar">مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده.</p><p data-lang="en" hidden>A supportive and proactive student community contributing to members’ success.</p></article>
+        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3><p data-lang="ar">توفير فرص وأنشطة وخدمات تعزز تجربة الطالب.</p><p data-lang="en" hidden>Providing opportunities, activities, and services that enhance the student experience.</p></article>
+        <article class="card"><h3 data-lang="ar">القيم</h3><h3 data-lang="en" hidden>Values</h3><p data-lang="ar">العمل الجماعي، الشفافية، التطوع، الابتكار، المسؤولية.</p><p data-lang="en" hidden>Teamwork, transparency, volunteering, innovation, and responsibility.</p></article>
+        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3><p data-lang="ar">رئيس ونائب رئيس، قادة فرق (الفعاليات، الإعلام، العلاقات)، ومنسقون.</p><p data-lang="en" hidden>President, Vice President, team leaders (events, media, relations), and coordinators.</p></article>
+      </div>
+    </section>
+
+    <section>
+      <h2 data-lang="ar">أعضاء المجلس</h2>
+      <h2 data-lang="en" hidden>Council Members</h2>
+      <div class="members">
+        <div class="member-card">
+          <img src="https://f.top4top.io/p_35166op0u4.jpg"
+               alt="حمد الهاجري – الرئيس" width="360" height="220"
+               loading="lazy" decoding="async"
+               srcset="https://f.top4top.io/p_35166op0u4.jpg 360w, https://f.top4top.io/p_35166op0u4.jpg 720w"
+               sizes="(max-width:600px) 92vw, 360px">
+          <h3 data-lang="ar">حمد الهاجري</h3><h3 data-lang="en" hidden>Hamad Al-Hajeri</h3>
+          <p class="muted" data-lang="ar">الرئيس</p><p class="muted" data-lang="en" hidden>President</p>
+        </div>
+        <div class="member-card">
+          <img src="https://c.top4top.io/p_3516ojbq71.jpg"
+               alt="عبدالله الجابري – نائب الرئيس" width="360" height="220"
+               loading="lazy" decoding="async"
+               srcset="https://c.top4top.io/p_3516ojbq71.jpg 360w, https://c.top4top.io/p_3516ojbq71.jpg 720w"
+               sizes="(max-width:600px) 92vw, 360px">
+          <h3 data-lang="ar">عبدالله الجابري</h3><h3 data-lang="en" hidden>Abdullah Al-Jaberi</h3>
+          <p class="muted" data-lang="ar">نائب الرئيس</p><p class="muted" data-lang="en" hidden>Vice President</p>
+        </div>
+        <div class="member-card">
+          <img src="https://d.top4top.io/p_3516sprel2.jpg"
+               alt="عبدالهادي المري – قائد المجموعة" width="360" height="220"
+               loading="lazy" decoding="async"
+               srcset="https://d.top4top.io/p_3516sprel2.jpg 360w, https://d.top4top.io/p_3516sprel2.jpg 720w"
+               sizes="(max-width:600px) 92vw, 360px">
+          <h3 data-lang="ar">عبدالهادي المري</h3><h3 data-lang="en" hidden>Abdulhadi Al-Marri</h3>
+          <p class="muted" data-lang="ar">قائد المجموعة</p><p class="muted" data-lang="en" hidden>Team Leader</p>
+        </div>
+        <div class="member-card">
+          <img src="https://h.top4top.io/p_3516xcf386.jpg"
+               alt="حسن الصيعري – منسق الفعاليات" width="360" height="220"
+               loading="lazy" decoding="async"
+               srcset="https://h.top4top.io/p_3516xcf386.jpg 360w, https://h.top4top.io/p_3516xcf386.jpg 720w"
+               sizes="(max-width:600px) 92vw, 360px">
+          <h3 data-lang="ar">حسن الصيعري</h3><h3 data-lang="en" hidden>Hassan Al-Sieari</h3>
+          <p class="muted" data-lang="ar">منسق الفعاليات</p><p class="muted" data-lang="en" hidden>Events Coordinator</p>
+        </div>
+        <div class="member-card">
+          <img src="https://g.top4top.io/p_3516zrfo75.jpg"
+               alt="حمد المري – منسق الإعلام" width="360" height="220"
+               loading="lazy" decoding="async"
+               srcset="https://g.top4top.io/p_3516zrfo75.jpg 360w, https://g.top4top.io/p_3516zrfo75.jpg 720w"
+               sizes="(max-width:600px) 92vw, 360px">
+          <h3 data-lang="ar">حمد المري</h3><h3 data-lang="en" hidden>Hamad Al-Marri</h3>
+          <p class="muted" data-lang="ar">منسق الإعلام</p><p class="muted" data-lang="en" hidden>Media Coordinator</p>
+        </div>
+        <div class="member-card">
+          <img src="https://e.top4top.io/p_35164gg6m3.jpg"
+               alt="محمد الكثيري – عضو" width="360" height="220"
+               loading="lazy" decoding="async"
+               srcset="https://e.top4top.io/p_35164gg6m3.jpg 360w, https://e.top4top.io/p_35164gg6m3.jpg 720w"
+               sizes="(max-width:600px) 92vw, 360px">
+          <h3 data-lang="ar">محمد الكثيري</h3><h3 data-lang="en" hidden>Mohamed Al-Katheeri</h3>
+          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
+        </div>
+        <div class="member-card">
+          <img src="https://i.top4top.io/p_35168rtso7.jpg"
+               alt="موزة العلي – عضو" width="360" height="220"
+               loading="lazy" decoding="async"
+               srcset="https://i.top4top.io/p_35168rtso7.jpg 360w, https://i.top4top.io/p_35168rtso7.jpg 720w"
+               sizes="(max-width:600px) 92vw, 360px">
+          <h3 data-lang="ar">موزة العلي</h3><h3 data-lang="en" hidden>Mouza Al-Ali</h3>
+          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container foot">
+      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
+    </div>
+  </footer>
+
+  <script>
+    // سنة الحقوق
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // منيو الموبايل + وصولية (aria-expanded) + إغلاق خارجي/ESC
+    const menuBtn = document.getElementById('menu-toggle');
+    const primaryNav = document.getElementById('primary-nav');
+
+    function setMenu(open){
+      primaryNav.setAttribute('data-open', String(open));
+      menuBtn.setAttribute('aria-expanded', String(open));
+      if(open){ primaryNav.querySelector('a,button')?.focus(); }
+    }
+    menuBtn.addEventListener('click',()=> setMenu(primaryNav.getAttribute('data-open')!=='true'));
+    matchMedia('(min-width:901px)').addEventListener('change', e=>{ if(e.matches) setMenu(false); });
+    document.addEventListener('click', (e)=>{
+      const open = primaryNav.getAttribute('data-open')==='true';
+      if(open && !primaryNav.contains(e.target) && !menuBtn.contains(e.target)) setMenu(false);
+    });
+    document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') setMenu(false); });
+
+    // اللغة + حفظ التفضيل
+    const toggleBtn = document.getElementById('lang-toggle');
+    let isEn = localStorage.getItem('khotwa_lang') === 'en';
+    function setLang(en){
+      isEn = en;
+      document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
+      document.querySelectorAll('[data-lang="en"]').forEach(el => el.hidden = !en);
+      document.documentElement.lang = en ? 'en' : 'ar';
+      document.documentElement.dir  = en ? 'ltr' : 'rtl';
+      toggleBtn.textContent = en ? 'العربية' : 'English';
+      localStorage.setItem('khotwa_lang', en ? 'en' : 'ar');
+    }
+    toggleBtn.addEventListener('click',()=> setLang(!isEn));
+    setLang(isEn);
+  </script>
+</body>
+</html>
